welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: value bleu is not a member of object java.awt.Color
faireV(Color.bleu)
             ^